--- a/public/css/home.css
+++ b/public/css/home.css
@@ -167,3 +167,181 @@
 .home-image img {
     width: auto;
 }
+
+@media (max-width: 750px) {
+    .lms-home-1 {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .home-title {
+        width: 100%;
+    }
+
+    .home-image {
+        width: 90%;
+    }
+}
+
+
+/* home section 2 */
+
+.lms-home-2 {
+    margin-top: 2em;
+    background-color: white;
+    border-radius: 20px;
+
+}
+
+.lms-home-2 h1 {
+    text-align: center;
+}
+
+.bxes {
+    border: 2px solid black;
+    padding: 5px;
+}
+
+.feature-box-1 {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1em;
+    padding: 1em;
+}
+
+.feature-box-1-left {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    flex: 2;
+}
+
+.feature-box-1-left-1,
+.feature-box-1-left-2 {
+    border: 2px solid rgb(151, 151, 151);
+    padding: 10px;
+    box-sizing: border-box;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1em;
+    border-radius: 20px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.feature-box-1-left-1 img {
+    width: 200px;
+}
+
+.feature-box-1-left-2 img {
+    width: 200px;
+}
+
+.feature-box-1-right {
+    border: 2px solid rgb(151, 151, 151);
+    padding: 10px;
+    box-sizing: border-box;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.feature-box-1-right img {
+    width: 400px;
+}
+
+.feature-box-1-left>div {
+    flex: 1;
+}
+
+.feature-box-1-left-1:hover,
+.feature-box-1-left-2:hover,
+.feature-box-1-right:hover {
+    transform: translate(-10px, -10px);
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width:990px) {
+    .feature-box-1-left-1 img {
+        width: 150px;
+    }
+
+    .feature-box-1-left-2 img {
+        width: 150px;
+    }
+
+    .feature-box-1-right img {
+        width: 350px;
+    }
+
+}
+
+@media (max-width:850px) {
+
+
+    .feature-box-1-left-1 img {
+        width: 100px;
+    }
+
+
+
+    .feature-box-1-left-2 img {
+        width: 100px;
+    }
+
+    .feature-box-1-right img {
+        width: 280px;
+    }
+}
+
+@media (max-width: 768px) {
+    .feature-box-1 {
+        flex-direction: column;
+    }
+
+    .feature-box-1-left-1 {
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+    }
+
+    .feature-box-1-left-2 {
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+    }
+
+    .feature-box-1-left-1 img {
+        width: 200px
+    }
+
+
+
+    .feature-box-1-left-2 img {
+        width: 200px
+    }
+
+    .feature-box-1-right {
+        height: auto;
+    }
+}
+
+@media (max-width:450px) {
+    .feature-box-1-left-1 img {
+        width: 150px;
+    }
+
+
+
+    .feature-box-1-left-2 img {
+        width: 150px;
+    }
+
+    .feature-box-1-right img {
+        width: 150px;
+    }
+}
